Added Preloaded games available to be loaded from the front and backend

--- a/backend/staticfiles/styles/layout/game-details.css
+++ b/backend/staticfiles/styles/layout/game-details.css
@@ -100,6 +100,7 @@
 .buttons {
     margin-top: 16px;
     display: flex;
+    align-items: end;
     gap: 5px;
     justify-content: center;
     flex-wrap: wrap;
@@ -109,6 +110,7 @@
    Go Back Button
    =========================== */
 .go-back-btn {
+    max-height: 35px;
     position: relative;
     display: inline-flex;
     align-items: center;
