--- a/frontend_app/src/styles/layout/game-details.css
+++ b/frontend_app/src/styles/layout/game-details.css
@@ -108,6 +108,7 @@
 .buttons {
     margin-top: 16px;
     display: flex;
+    align-items: end;
     gap: 5px;
     justify-content: center;
     flex-wrap: wrap;
@@ -117,6 +118,7 @@
    GO BACK BUTTON
    ========================================== */
 .go-back-btn {
+    max-height: 35px;
     position: relative;
     display: inline-flex;
     align-items: center;
